--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,8 @@
     display: flex;
     background-image: url('../resources/Vectorrr.png');
     background-repeat: no-repeat;
-    margin: 40px;
+    margin-top: 50px;
+    padding-bottom: 50px;
   }
 
   .column-title{
