--- a/style/style.css
+++ b/style/style.css
@@ -192,10 +192,40 @@ main{
   font-weight: 700;
  }
 
- .dolar{
+ 
+
+ .the-best-gift{
+  color: #F00;
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 100px;
+  margin-bottom: 0px;
+
+ }
+
+ .our-awsome-port{
+  color: #070211;
+  font-size: 48px;
+  font-weight: 900;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  
+  
+
+
+ }
+
+ .dolor-sit{
   color: rgba(7, 2, 17, 0.60);
   font-size: 20px;
   font-weight: 400;
   margin-right: 5px;
+  margin-top: 22px;
 
+ }
+
+ .img-a{
+  margin-top: 48px;
+  display: flex;
+ 
  }
