--- a/style/style.css
+++ b/style/style.css
@@ -225,7 +225,41 @@ main{
  }
 
  .img-a{
-  margin-top: 48px;
+  
   display: flex;
  
+ }
+
+ .mail{
+  margin-top: 50px;
+    margin-bottom: 0px;
+  
+ }
+
+ .subscribe-newspaper{
+  color: #070211;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 900;
+  margin-top: 5px;
+  margin-bottom: 0px;
+
+ }
+
+ .mail-g{
+  text-align: center;
+ }
+
+ .main-mail{
+    margin-top: 100px;
+ }
+
+ .paragraph-two{
+  color: rgba(7, 2, 17, 0.60);
+text-align: center;
+font-size: 20px;
+font-weight: 400;
+margin-top: 22px;
+
+
  }
